# bb_waggledance_annotator

./: .gitignore  README.md  dance_analysis.py  pyproject.toml
dance_analysis/: __init__.py  dance_analysis.py
dance_analysis_2/: annotations.py  main.py  main.py.lprof  pipeline.py  ui.py  utils.py  video_capture.py
