[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dance_analysis"
version = "0.1.0"
description = "A tool to annotate videos with either arrows or points for bee waggle dances."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
dependencies = [
"numpy",
"pandas",
"scikit-image",
"opencv-python",
"pyav",
"pillow",
"pandastable",
"tk"
]

[project.scripts]
dance_analysis = "dance_analysis:main"

[tool.setuptools]
packages = { find = { where = ["."] } }
include-package-data = true