[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dance_analysis"
version = "0.2.0"
description = "A tool to annotate videos with either arrows or points for bee waggle dances."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
dependencies = [
    "numpy>=2",
    "pandas>=2.2",
    "scikit-image>=0.24",
    "opencv-python>=4.10",
    "av>=12",
    "pillow",
    "pandastable"
]

[project.scripts]
dance_analysis = "dance_analysis.dance_analysis:main"
dance_analysis_2 = "dance_analysis_2.main:main"

[tool.setuptools]
packages = { find = { where = ["."] } }
include-package-data = true
